# cpp-protocol

./: CMakeCache.txt  CTestTestfile.cmake  LICENSE  Makefile  cmake_install.cmake  parser_test[1]_include.cmake
simpleparser/: CMakeLists.txt
simpleparser/src/: simple_parser.cpp  simple_parser.hpp
simpleparser/tests/: parser_test.cpp
